--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jsdesign/jsd-button": "^1.0.1",
+    "@jsdesign/jsd-input": "^1.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.2.2",
+    "formik": "^1.5.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "rxjs": "^6.5.3"
+  },
+  "devDependencies": {
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/jest": "24.0.17",
+    "@types/node": "12.7.1",
+    "node-sass": "^4.14.1",
+    "react-scripts": "3.4.1",
+    "tslint": "^5.18.0",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
